--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.6",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
