--- a/admin/package.json
+++ b/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
